# toolchains_cc

./: .bazelrc  .commitlintrc.js  .gitattributes  .gitignore  .mcp.json  BUILD  BUILD.bazel  CLAUDE.md  Dockerfile  MODULE.bazel  README.md  build_llvm_linux.sh  buildifier  buildifier.bat  extensions.bzl  filter.py  main  main.c  remaining  step-01_initial-lines  step-02_working-directory  step-03_build-system-tools  step-04_download_sources  step-05_extract_sources  step-06.0_build  step-06.10_build  step-06.11_build  step-06.12_build  step-06.13_build  step-06.14_build  step-06.15_build  step-06.16_build  step-06.1_build  step-06.2_build  step-06.3_build  step-06.4_build  step-06.5_build  step-06.6_build  step-06.7_build  step-06.8_build  (+4 more)
.bcr/: metadata.template.json  source.template.json
.beads/: beads.jsonl  beads.left.meta.json  issues.jsonl
.devcontainer/: devcontainer.json  post-create.sh  settings.json
.github/: RENOVATE.md  renovate.json5
.github/workflows/: build.yml  build_binutils.yml  build_binutils_aarch64.yml  build_binutils_x86_64.yml  build_clang.yml  build_gcc.yml  build_gcc_aarch64.yml  build_gcc_ct-ng.yml  build_gcc_standalone.yml  build_gcc_x86_64.yml  build_glibc.yml  build_glibc_aarch64.yml  build_glibc_x86_64.yml  build_libclang.yml  build_linux_headers.yml  build_linux_headers_aarch64.yml  build_linux_headers_x86_64.yml  build_llvm.yml  build_llvm_aarch64.yml  build_llvm_x86_64.yml  build_musl.yml  build_musl_aarch64.yml  build_musl_x86_64.yml  buildifier.yml  ci.yml  create-release.sh  create_source_tarballs.yml  publish.yaml  publish.yml  run_examples.yml  update-bazelisk.yml
.github/workflows/build_binutils/: Dockerfile  build.sh  environment  step-1_install_dependencies  step-2.1_download_binutils_source  step-2.2_download_zlib_source  step-2.3_patch_binutils_source  step-2_download_sources  step-3.0_setup_host_toolchain  step-3.1_build_zlib  step-3.2_build_binutils  step-4_build_binutils  step-4_package_binutils  step-5_package_binutils  step-6_upload_release
.github/workflows/build_gcc/: Dockerfile  build.sh  environment  step-01_install_dependencies  step-02_download_prebuilt_artifacts  step-03_download_source  step-08_build_gcc  step-09_package_artifacts  step-10_upload_release  step-2.5_download_gcc_source  step-3.1_install_linux_headers  step-3.2_install_binutils  step-3.2_install_glibc  step-3.3_install_glibc  step-3.3_install_libc  step-3.4_install_gcc  step-3_configure_toolchain  step-4.1_build_gmp  step-4.2_build_isl  step-4.3_build_mpfr  step-4.4_build_mpc  step-4.5_build_gcc  step-5_package_toolchain  step-6_upload_release
.github/workflows/build_gcc_ct-ng/: build.sh  environment  step-3_configure_toolchain  step-4_build_toolchain  step-6_upload_release
.github/workflows/build_gcc_musl/: Dockerfile  build.sh  environment  step-1_install_dependencies  step-2.1_download_binutils_source  step-2.3_download_gmp_source  step-2.4_download_isl_source  step-2.6_download_mpc_source  step-2.7_download_mpfr_source  step-2.8_download_musl_source  step-2.9_download_zlib_source  step-3.01_build_zlib  step-3.02_build_gmp  step-3.03_build_mpfr  step-3.04_build_isl  step-3.05_build_mpc  step-3.06_build_binutils  step-3.07_install_linux_headers  step-3.08_build_core_gcc  step-3.09_build_musl  step-3.10_build_final_gcc
.github/workflows/build_gcc_standalone/: Dockerfile  environment  step-02_download_source  step-03_build_ncurses  step-04_build_zlib  step-05_build_zstd  step-06_build_gmp  step-07_build_mpfr  step-08_build_isl  step-09_build_mpc  step-13_bootstrap_gcc  step-14_build_glibc  step-15_build_gcc  step-16_package_toolchain  step-17_upload_release
.github/workflows/build_glibc/: Dockerfile  build.sh  build_dockerfile  environment  step-1_install_dependencies  step-2.1_download_glibc_source  step-2.2_download_linux_source  step-2_download_glibc_source  (+8 more)
c++/: BUILD
docs/: musl-cross-make-analysis.md
docs/investigations/: remove-convenience-toolchain.md
docs/runbooks/: add-new-glibc-version.md  add-new-linux-headers-version.md  add-toolchain-configuration.md  build-new-gcc-version.md  commit-message-guidelines.md  github-actions-workflows.md  update-binary-release-metadata.md
examples/boost/: BUILD.bazel  MODULE.bazel  asio_example.cc  filesystem_example.cc
examples/curl/: BUILD.bazel  MODULE.bazel  main.c
examples/fmt/: BUILD.bazel  MODULE.bazel  main.cc
examples/gmp/: .bazelrc  BUILD.bazel  MODULE.bazel  main.c
examples/googletest/: BUILD.bazel  MODULE.bazel  factorial.cc  factorial.h  factorial_test.cc
examples/grpc/: .bazelrc  BUILD.bazel  MODULE.bazel  client.cc  server.cc
examples/hello_world/: MODULE.bazel  validate_linkage.py
examples/libarchive/: BUILD.bazel  MODULE.bazel  main.c
examples/libuv/: BUILD.bazel  MODULE.bazel  main.c
examples/nlohmann_json/: BUILD.bazel  MODULE.bazel  main.cc
examples/protobuf/: .bazelrc  BUILD.bazel  MODULE.bazel  main.cc  person.proto
examples/rust_bindgen/: BUILD.bazel  MODULE.bazel  main.rs  simple.cc  simple.h
examples/sqlite/: BUILD.bazel  MODULE.bazel  main.c
examples/zlib/: BUILD.bazel  MODULE.bazel  main.c
examples/zstd/: BUILD.bazel  MODULE.bazel  main.c
impl/: alpine.bzl  config.bzl  declare_toolchain.bzl  declare_tools.bzl  host_detect.bzl  platform_defaults.bzl  ubuntu.bzl
infra/gcc/: Dockerfile
infra/llvm/: Dockerfile
lore/gcc/: load_bearing_directories.md  load_bearing_empty_directories.md
private/: BUILD.bazel  config.bzl  declare_toolchain.bzl  declare_tools.bzl  download_bins.bzl  eager_declare_toolchain.bzl  lazy_download_bins.bzl
private/downloads/: all.bzl  binutils.bzl  constants.bzl  gcc.bzl  glibc.bzl  linux_headers.bzl  llvm.bzl  musl.bzl
repo_gen/: generate_repo.py  runtimes.json
runtimes/musl/: BUILD
tests/hello_world/: BUILD.bazel
toolchains/: BUILD
toolchains/llvm/: 19.1.7.bzl  llvm.bzl
tools/: bazelisk-darwin-amd64.sha256  bazelisk-darwin-arm64.sha256  bazelisk-linux-amd64.sha256  bazelisk-linux-arm64.sha256  bazelisk-windows-amd64.exe.sha256  bazelisk-windows-arm64.exe.sha256  buildifier  buildifier.bat
(+96 files in other folders)
