"C/C++ toolchains for Bazel"

module(
    name = "toolchains_cc",
    version = "2025.9.18",
    bazel_compatibility = [">=7.0.0"],
    compatibility_level = 0,
)

# ==================
# || Dependencies ||
# ==================
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# ======================
# || Dev Dependencies ||
# ======================
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

# =====================
# || Dev Toolchains ||
# =====================
# Toolchain for testing toolchains_cc itself. Not visible to downstream modules.
cc_toolchains = use_extension("@toolchains_cc//:extensions.bzl", "cc_toolchains", dev_dependency = True)
cc_toolchains.declare(name = "toolchains_cc_dev")
use_repo(cc_toolchains, "toolchains_cc_dev")

register_toolchains(
    "@toolchains_cc_dev",
    dev_dependency = True,
)
