"Minimal example: using boost libraries with toolchains_cc"

module(name = "boost_example")

# ==================
# || Dependencies ||
# ==================
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.filesystem", version = "1.89.0.bcr.2")

# ======================
# || C/C++ Toolchains ||
# ======================
bazel_dep(name = "toolchains_cc", version = "2025.9.18")

# For local development/testing, override with the local toolchains_cc.
# Comment out or remove this line when using toolchains_cc from BCR.
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

register_toolchains("@toolchains_cc")
