"Minimal example: using fmt with toolchains_cc"

module(name = "fmt_example")

# ==================
# || Dependencies ||
# ==================
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "fmt", version = "12.1.0")

# ======================
# || C/C++ Toolchains ||
# ======================
bazel_dep(name = "toolchains_cc", version = "2025.9.18")

# For local development/testing, override with the local toolchains_cc.
# Comment out or remove this line when using toolchains_cc from BCR.
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

register_toolchains("@toolchains_cc")
