module(name = "hello_world_test")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "toolchains_cc")
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

register_toolchains("@toolchains_cc", dev_dependency = True)
