module(name = "hello_world_test")

bazel_dep(name = "rules_cc", version = "0.2.3")
git_override(
    module_name = "rules_cc",
    remote = "https://github.com/reutermj/rules_cc.git",
    commit = "d3274a0f705e22eae592ecb40cb687791562ddd2",
)

bazel_dep(name = "toolchains_cc")
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

register_toolchains("@toolchains_cc", dev_dependency = True)
