"Minimal example: using zstd with toolchains_cc"

module(name = "zstd_example")

# ==================
# || Dependencies ||
# ==================
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "zstd", version = "1.5.7")

# ======================
# || C/C++ Toolchains ||
# ======================
bazel_dep(name = "toolchains_cc", version = "2025.9.18")

# For local development/testing, override with the local toolchains_cc.
# Comment out or remove this line when using toolchains_cc from BCR.
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

cc_toolchains = use_extension("@toolchains_cc//:extensions.bzl", "cc_toolchains")
cc_toolchains.declare(name = "my_toolchain")
use_repo(cc_toolchains, "my_toolchain")

register_toolchains("@my_toolchain")
